# pylorenzmie

./: .gitignore  .readthedocs.yaml  CITATION.cff  CLAUDE.md  Makefile  README.md  TODO.md  __init__.py  pyproject.toml
analysis/: .LMHologram  BaseEstimator.py  DEEstimator.py  Estimator.py  Feature.py  Frame.py  Hologram.py  LMHologram.json  Localizer.py  MLPEstimator.py  Mask.py  Optimizer.py  RadialEstimator.py  RadialMask.py  Trajectory.py  Video.py  __init__.py  catchEstimator.py  catchLocalizer.py  cupyOptimizer.py  mlp_estimator.joblib
detection/: Estimator.py  Localizer.py  __init__.py  catchLocalizer.py  localize.py
devel/: h5video.py  speed_example.py  train_mlp_estimator.py  visualization.py
docs/: Aberrations.ipynb  FeatureDetection.ipynb  Fitting.ipynb  FrameAnalysis.ipynb  MultiSphere.ipynb  TestFrame.ipynb  Video_analysis.ipynb  conf.py  index.rst  lmtool.rst  quickstart.rst
fitting/: .LMHologram  Estimator.py  FitResult.py  GlobalSampler.py  LMHologram.pickle  Localizer.py  Mask.py  Optimizer.py  Settings.py  __init__.py  circletransform.py  cukernels.py  fit_config.py  localize.py  mie_fit.py  minimizers.py
lib/: Azimuthal.py  CircleTransform.py  Hologram.py  LMObject.py  __init__.py  azimuthal.py  circletransform.py  coordinates.py  lmtypes.py  meshgrid.py
lmtool/: ALMWidget.py  ALMWidget.ui  DoubleSlider.py  DoubleSpinBox.py  FitWidget.py  ImageWidget.py  LMTool.json  LMTool.py  LMTool.ui  LMTool_Ui.py  LMTool_Ui.ui  LMWidget.py  LMWidget.ui  OptimizerWidget.py  ParameterWidget.py  ParameterWidget.ui  ProfileWidget.py  QDoubleSlider.py  QParameterWidget.py  ResultWidget.py  SpinBox.py  __main__.py
processing/: Feature.py  Frame.py  Trajectory.py  Video.py  __init__.py
scripts/: update_bib.py
test/: test_lorenzmie.py  test_particle.py  test_sphere.py
tests/: test_baseestimator.py  test_best_model.py  test_cluster.py  test_cupylorenzmie.py  test_deestimator.py  test_dimer.py  test_estimator.py  test_feature.py  test_frame.py  test_hologram.py  test_instrument.py  test_jaxlorenzmie.py  test_lib.py  test_lmhologram.py  test_localizer.py  test_lorenzmie.py  test_mask.py  test_mlpestimator.py  test_optimizer.py  test_particle.py  test_particle_ai.py  test_radialestimator.py  test_radialmask.py  test_settings.py  test_sphere.py  test_torchlorenzmie.py  test_trajectory.py
theory/: Aberrated.py  AberratedLorenzMie.py  Aberrations.py  Cluster.py  CudaGeneralizedLorenzMie.py  CudaLMHologram.py  CudaLorenzMie.py  Dimer.py  FastGeneralizedLorenzMie.py  FastSphere.py  Feature.py  Field.py  Frame.py  GeneralizedLorenzMie.py  Hologram.py  Instrument.py  LMHologram.py  LorenzMie.py  Particle.py  (+28 more)
(+46 files in other folders)
